# k8s-intro

./: README.md
db-api/: Cargo.toml  Dockerfile
db-api/k8s/: deployment.yaml  service.yaml
db-api/src/: main.rs
db-api/src/models/: users.rs
hello-api/: Cargo.toml  Dockerfile
hello-api/k8s/: deployment.yaml  service.yaml
hello-api/src/: main.rs
mysql/: deployment.yaml  secret.yaml
