[package]
name = "db-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.19"
sea-orm = { version = "^0", features = [
  "runtime-tokio-native-tls",
  "sqlx-mysql",
  "with-json",
] }
serde = { version = "1.0.180", features = ["derive"] }
serde_json = "1.0.104"
tokio = { version = "1.29.1", features = ["full"] }
